--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -146,17 +146,16 @@
     background-color: #FFFFFF;
     border-radius: 8px;
     margin-left: 28px;
+    transition: transform 0.3s ease;
   }
 
   .feedback:hover {
-    width: 400px;
-    background-color: #FFFFFF;
-    border-radius: 8px;
+    transform: scale(1.02);
   }
 
   .box {
     width: 100%;
-    height: 225px;
+    height: 250px;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -168,6 +167,22 @@
     left: 0px;
     position: absolute;
     display: flex;
+    animation: scroll 30s linear infinite;
+  }
+
+  .box:hover .list {
+    animation-play-state: paused;
+  }
+
+  @keyframes scroll {
+    from {
+      transform: translateX(0);
+    }
+
+    to {
+      transform: translateX(-50%);
+      /* 滾動到一半長度 */
+    }
   }
 }
 
